--- a/updates.html
+++ b/updates.html
@@ -83,13 +83,12 @@
         <br>
         
         <div class="row">
-        <div class="col-lg-6 col-sm-6">Current version: R 1.02</div>
+        <div class="col-lg-6 col-sm-6">Current version: R 1.03</div>
         <div class="col-lg-6 col-sm-6">After the first session, a few problems arose, <ol>
             <li>Voice chat isn't working (<b>Resolved</b>)</li>
             <li>Coustom skins don't show up (unfixable)</li>
         
-        </ol> I added a recipie for Creeper Spawn Eggs, being 4 gunpowder on the middle edges and one egg in the center, this is to allow for an easier obtainment of the 7 added music discs<br>
-            There are some crafting recipies changed, TNT to be specific, it is now the hermitcraft recipie, sand in corners, paper on the middle of the sides and gunpowder in the center!</div>
+        </ol> I added the Vanillatweaks datapacks "Coal to black Dye" and "Couldron Concrete" </div>
         </div>
         </div>
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-2XDMD92T3Y"></script><script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments);}gtag('js',new Date());gtag('config','G-2XDMD92T3Y');</script>
@@ -101,4 +100,5 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     </body>
+
 </html>
