--- a/updates.html
+++ b/updates.html
@@ -88,7 +88,7 @@
             <li>Voice chat isn't working (<b>Resolved</b>)</li>
             <li>Coustom skins don't show up (unfixable)</li>
         
-        </ol> I added the Vanillatweaks datapacks "Coal to black Dye" and "Couldron Concrete" </div>
+        </ol> I removed the Vanillatweaks datapack "Coal to black Dye"</div>
         </div>
         </div>
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-2XDMD92T3Y"></script><script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments);}gtag('js',new Date());gtag('config','G-2XDMD92T3Y');</script>
@@ -102,3 +102,4 @@
     </body>
 
 </html>
+
