--- a/rules.html
+++ b/rules.html
@@ -80,7 +80,7 @@
             <ol>
                 <li>No Greifing</li>
                 <li>No Theft</li>
-                <li>No Hacking, wormhole, exploiting or getting cought x-raying</li>
+                <li>No Hacking, wormhole, exploiting or getting cought x-raying, dupeing tripwires and items that can be traded with villagers <b>excludeing diamonds</b> are allowed to be duped</li>
                 <li>No discrimination of any type (ie: no racisim)</li>
                 <li>I <b>would</b> say "no Chris legal loopholes" but, I <b><i>am</i></b> Chris, so have fun! </li>
             </ol>
@@ -102,4 +102,5 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     </body>
+
 </html>
