Datapacks & Mods.html

--- a/Datapacks.html
+++ b/Datapacks.html
@@ -91,13 +91,16 @@
             <li>Storm Channeling</li>
             <li>Timber</li>
 			<li>Cauldron Concrete</li>
-			<li>Coal to Black Dye</li>
         </ul>
         <div class="col-lg-6 col-sm-6">The other packs are programmed by our lead dev (me!)
             <ul>
                 <li>Infinite Music Discs <a href="https://drive.google.com/drive/folders/1wnC0m5jfi2FcCTZJMT51K5h7CB3BNX-a">(dp+rp the rp is required for the dp to work)</a></li>
                 <li>Blasting Upgrade <a href="https://drive.google.com/drive/folders/19P2rtRPQZlpRAGpCeuQP63R3pR4X0Y3T?usp=drive_link">(dp)</a></li>
             </ul>
+		<div class="col-lg-6 col-sm-6"> All the mods that are used are </div> <ol>
+
+			
+		</ol>	
         </div>
         </div>
         </div>
@@ -111,3 +114,4 @@
     </body>
 
 </html>
+
