--- a/Datapacks.html
+++ b/Datapacks.html
@@ -98,7 +98,10 @@
                 <li>Blasting Upgrade <a href="https://drive.google.com/drive/folders/19P2rtRPQZlpRAGpCeuQP63R3pR4X0Y3T?usp=drive_link">(dp)</a></li>
             </ul>
 		<div class="col-lg-6 col-sm-6"> All the mods that are used are </div> <ol>
-
+		<li>Simple Voice Chat <a href="https://modrinth.com/plugin/simple-voice-chat/versions">Modrinth	</a> <a href="https://www.curseforge.com/minecraft/mc-mods/simple-voice-chat">Cuseforge</a> </li>
+			<li>Infinite Trading <a href="https://modrinth.com/mod/infinite-trading/version/1.21.8-4.6-fabric+forge+neo">Modrinth</a> <a href="https://www.curseforge.com/minecraft/mc-mods/infinite-trading">Curseforge</a></li>
+			<li>Fabric <a href="https://fabricmc.net/"> FabricMC </a></li>
+			<li>All mods are run through Fabric, you only have to download the Simple Voice Chat mod to be able to use it, the Infinite Trades mod applies on it's own</li>
 			
 		</ol>	
         </div>
@@ -114,4 +117,5 @@
     </body>
 
 </html>
+
 
