--- a/updates.html
+++ b/updates.html
@@ -88,7 +88,8 @@
 			<li>Simple Voice Chat <a href="https://modrinth.com/plugin/simple-voice-chat/versions">Modrinth	</a> <a href="https://www.curseforge.com/minecraft/mc-mods/simple-voice-chat">Cuseforge</a> </li>
 			<li>Infinite Trading <a href="https://modrinth.com/mod/infinite-trading/version/1.21.8-4.6-fabric+forge+neo">Modrinth</a> <a href="https://www.curseforge.com/minecraft/mc-mods/infinite-trading">Curseforge</a></li>
 			<li>Fabric <a href="https://fabricmc.net/"> FabricMC </a></li>
-			<li>All mods are run through Fabric, you only have to download the Simple Voice Chat mod to be able to use it, the Infinite Trades mod applies on it's own</li>
+			<li>Fabric API (found on modrinth and curseforge)<li>
+			<li>All mods are run through Fabric</li>
             
         
         </ol></div>
@@ -105,6 +106,7 @@
     </body>
 
 </html>
+
 
 
 
