--- a/updates.html
+++ b/updates.html
@@ -89,7 +89,9 @@
 			<li>Infinite Trading <a href="https://modrinth.com/mod/infinite-trading/version/1.21.8-4.6-fabric+forge+neo">Modrinth</a> <a href="https://www.curseforge.com/minecraft/mc-mods/infinite-trading">Curseforge</a></li>
 			<li>Fabric <a href="https://fabricmc.net/"> FabricMC </a></li>
 			<li>Fabric API (found on modrinth and curseforge)<li>
+			<li>Collective (found on Modrinth and Curseforge)</li>
 			<li>All mods are run through Fabric</li>
+			
             
         
         </ol></div>
@@ -106,6 +108,7 @@
     </body>
 
 </html>
+
 
 
 
