--- a/updates.html
+++ b/updates.html
@@ -83,8 +83,8 @@
         <br>
         
         <div class="row">
-        <div class="col-lg-6 col-sm-6">Current version: R 1.06</div>
-        <div class="col-lg-6 col-sm-6">I've added the "More Doors" mod</div>
+        <div class="col-lg-6 col-sm-6">Current version: R 1.07</div>
+        <div class="col-lg-6 col-sm-6">I've added the "Bagel's Reusable Vaults" Datapack</div>
         </div>
         </div>
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-2XDMD92T3Y"></script><script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments);}gtag('js',new Date());gtag('config','G-2XDMD92T3Y');</script>
@@ -98,6 +98,7 @@
     </body>
 
 </html>
+
 
 
 
